@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 Google LLC.
+ * Copyright 2016-2022 Google LLC.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,9 @@
 
 package com.google.cloud.tools.appengine.operations;
 
+import static com.google.common.base.StandardSystemProperty.JAVA_SPECIFICATION_VERSION;
+import static org.junit.Assert.assertThrows;
+import static org.junit.Assume.assumeTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
@@ -39,6 +42,7 @@ import java.util.logging.Level;
 import java.util.logging.LogRecord;
 import org.junit.Assert;
 import org.junit.Before;
+import org.junit.BeforeClass;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
@@ -49,7 +53,7 @@ import org.mockito.junit.MockitoJUnitRunner;
 
 /** Unit tests for {@link DevServer}. */
 @RunWith(MockitoJUnitRunner.class)
-public class DevServerTest {
+public class DevServerJava9OrAboveTest {
 
   @Rule public TemporaryFolder temporaryFolder = new TemporaryFolder();
   private Path fakeJavaSdkHome;
@@ -73,6 +77,14 @@ public class DevServerTest {
       ImmutableMap.of("GAE_ENV", "localdev", "GAE_RUNTIME", "java7");
   private final Map<String, String> expectedJava8Environment =
       ImmutableMap.of("GAE_ENV", "localdev", "GAE_RUNTIME", "java8");
+
+  @BeforeClass
+  public static void disableIfJavaVersion8() {
+    // CI does not run with anything below 8, so equals is safe.
+    assumeTrue(
+        "DevServerTestJava8 requires Java 9 or above",
+        !JAVA_SPECIFICATION_VERSION.value().equals("1.8"));
+  }
 
   @Before
   public void setUp() throws IOException {
@@ -126,7 +138,6 @@ public class DevServerTest {
 
   @Test
   public void testPrepareCommand_allFlags() throws Exception {
-
     RunConfiguration configuration =
         Mockito.spy(
             RunConfiguration.builder(ImmutableList.of(java8Service))
@@ -139,6 +150,74 @@ public class DevServerTest {
                 .projectId("my-project")
                 .environment(ImmutableMap.of("ENV_NAME", "ENV_VAL"))
                 .additionalArguments(Arrays.asList("--ARG1", "--ARG2"))
+                .projectJdkVersion("11")
+                .build());
+
+    SpyVerifier.newVerifier(configuration).verifyAllValuesNotNull();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--address=host",
+            "--port=8090",
+            "--default_gcs_bucket=buckets",
+            "--application=my-project",
+            "--allow_remote_shutdown",
+            "--disable_update_check",
+            "--ARG1",
+            "--ARG2",
+            "--no_java_agent",
+            java8Service.toString());
+
+    List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "-Dappengine.fullscan.seconds=1",
+            "-Dflag1",
+            "-Dflag2",
+            "--add-opens",
+            "java.base/java.net=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-Duse_jetty9_runtime=true",
+            "-D--enable_all_permissions=true");
+
+    // Not us immutable map, it enforces order
+    Map<String, String> expectedEnvironment =
+        ImmutableMap.<String, String>builder()
+            .putAll(expectedJava8Environment)
+            .put("ENV_NAME", "ENV_VAL")
+            .build();
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(
+            expectedJvmArgs,
+            expectedFlags,
+            expectedEnvironment,
+            java8Service /* workingDirectory */);
+
+    SpyVerifier.newVerifier(configuration)
+        .verifyDeclaredGetters(
+            ImmutableMap.of("getServices", 7, "getJavaHomeDir", 2, "getJvmFlags", 2));
+  }
+
+  @Test
+  public void testPrepareCommand_allFlags_projectJDKVersionJava8() throws Exception {
+    RunConfiguration configuration =
+        Mockito.spy(
+            RunConfiguration.builder(ImmutableList.of(java8Service))
+                .host("host")
+                .port(8090)
+                .jvmFlags(ImmutableList.of("-Dflag1", "-Dflag2"))
+                .defaultGcsBucketName("buckets")
+                .environment(null)
+                .automaticRestart(true)
+                .projectId("my-project")
+                .environment(ImmutableMap.of("ENV_NAME", "ENV_VAL"))
+                .additionalArguments(Arrays.asList("--ARG1", "--ARG2"))
+                .projectJdkVersion("1.8")
                 .build());
 
     SpyVerifier.newVerifier(configuration).verifyAllValuesNotNull();
@@ -198,6 +277,33 @@ public class DevServerTest {
             "--no_java_agent",
             java8Service.toString());
     List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
+    devServer.run(configuration);
+    verify(devAppServerRunner, times(1))
+        .run(
+            expectedJvmArgs,
+            expectedFlags,
+            expectedJava8Environment,
+            java8Service /* workingDirectory */);
+  }
+
+  @Test
+  public void testPrepareCommand_booleanFlags_projectJDKVersionJava8()
+      throws AppEngineException, ProcessHandlerException, IOException {
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java8Service)).projectJdkVersion("1.8").build();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown",
+            "--disable_update_check",
+            "--no_java_agent",
+            java8Service.toString());
+    List<String> expectedJvmArgs =
         ImmutableList.of("-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
     devServer.run(configuration);
     verify(devAppServerRunner, times(1))
@@ -214,6 +320,37 @@ public class DevServerTest {
 
     RunConfiguration configuration =
         RunConfiguration.builder(ImmutableList.of(java8Service)).build();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown",
+            "--disable_update_check",
+            "--no_java_agent",
+            java8Service.toString());
+
+    List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(
+            expectedJvmArgs,
+            expectedFlags,
+            expectedJava8Environment,
+            java8Service /* workingDirectory */);
+  }
+
+  @Test
+  public void testPrepareCommand_noFlags_projectJDKVersionJava8()
+      throws AppEngineException, ProcessHandlerException, IOException {
+
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java8Service)).projectJdkVersion("1.8").build();
 
     List<String> expectedFlags =
         ImmutableList.of(
@@ -241,6 +378,37 @@ public class DevServerTest {
 
     RunConfiguration configuration =
         RunConfiguration.builder(ImmutableList.of(java7Service)).build();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown", "--disable_update_check", java7Service.toString());
+    List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "--add-opens",
+            "java.base/java.net=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-javaagent:"
+                + fakeJavaSdkHome.resolve("agent/appengine-agent.jar").toAbsolutePath().toString());
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(
+            expectedJvmArgs,
+            expectedFlags,
+            expectedJava7Environment,
+            java7Service /* workingDirectory */);
+  }
+
+  @Test
+  public void testPrepareCommand_noFlagsJava7_projectJDKVersionJava8()
+      throws AppEngineException, ProcessHandlerException, IOException {
+
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java7Service)).projectJdkVersion("1.8").build();
 
     List<String> expectedFlags =
         ImmutableList.of(
@@ -276,6 +444,36 @@ public class DevServerTest {
             java8Service.toString());
 
     List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(expectedJvmArgs, expectedFlags, expectedJava8Environment, null /* workingDirectory */);
+  }
+
+  @Test
+  public void testPrepareCommand_noFlagsMultiModule_projectJDKVersionJava8()
+      throws AppEngineException, ProcessHandlerException, IOException {
+
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java7Service, java8Service))
+            .projectJdkVersion("1.8")
+            .build();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown",
+            "--disable_update_check",
+            "--no_java_agent",
+            java7Service.toString(),
+            java8Service.toString());
+
+    List<String> expectedJvmArgs =
         ImmutableList.of("-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
 
     devServer.run(configuration);
@@ -289,6 +487,46 @@ public class DevServerTest {
       throws AppEngineException, ProcessHandlerException, IOException {
     RunConfiguration configuration =
         RunConfiguration.builder(ImmutableList.of(java8Service1EnvVars)).build();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown",
+            "--disable_update_check",
+            "--no_java_agent",
+            java8Service1EnvVars.toString());
+
+    List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
+
+    Map<String, String> expectedConfigurationEnvironment =
+        ImmutableMap.of("key1", "val1", "key2", "val2");
+    Map<String, String> expectedEnvironment =
+        ImmutableMap.<String, String>builder()
+            .putAll(expectedConfigurationEnvironment)
+            .putAll(expectedJava8Environment)
+            .build();
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(
+            expectedJvmArgs,
+            expectedFlags,
+            expectedEnvironment,
+            java8Service1EnvVars /* workingDirectory */);
+  }
+
+  @Test
+  public void testPrepareCommand_appEngineWebXmlEnvironmentVariables_projectJDKVersionJava8()
+      throws AppEngineException, ProcessHandlerException, IOException {
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java8Service1EnvVars))
+            .projectJdkVersion("1.8")
+            .build();
 
     List<String> expectedFlags =
         ImmutableList.of(
@@ -323,6 +561,44 @@ public class DevServerTest {
       throws AppEngineException, ProcessHandlerException, IOException {
     RunConfiguration configuration =
         RunConfiguration.builder(ImmutableList.of(java8Service1EnvVars, java8Service2EnvVars))
+            .build();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown",
+            "--disable_update_check",
+            "--no_java_agent",
+            java8Service1EnvVars.toString(),
+            java8Service2EnvVars.toString());
+
+    List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
+
+    Map<String, String> expectedConfigurationEnvironment =
+        ImmutableMap.of("key1", "val1", "keya", "vala", "key2", "duplicated-key", "keyc", "valc");
+    Map<String, String> expectedEnvironment =
+        ImmutableMap.<String, String>builder()
+            .putAll(expectedConfigurationEnvironment)
+            .putAll(expectedJava8Environment)
+            .build();
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(expectedJvmArgs, expectedFlags, expectedEnvironment, null /* workingDirectory */);
+  }
+
+  @Test
+  public void
+      testPrepareCommand_multipleServicesDuplicateAppEngineWebXmlEnvironmentVariables_projectJDKVersionJava8()
+          throws AppEngineException, ProcessHandlerException, IOException {
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java8Service1EnvVars, java8Service2EnvVars))
+            .projectJdkVersion("1.8")
             .build();
 
     List<String> expectedFlags =
@@ -371,6 +647,47 @@ public class DevServerTest {
             "--allow_remote_shutdown", "--disable_update_check", java7Service.toString());
     List<String> expectedJvmArgs =
         ImmutableList.of(
+            "--add-opens",
+            "java.base/java.net=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens",
+            "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-javaagent:"
+                + fakeJavaSdkHome.resolve("agent/appengine-agent.jar").toAbsolutePath().toString());
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(
+            expectedJvmArgs,
+            expectedFlags,
+            expectedEnvironment,
+            java7Service /* workingDirectory */);
+  }
+
+  @Test
+  public void testPrepareCommand_clientSuppliedEnvironmentVariables_projectJDKVersionJava8()
+      throws AppEngineException, ProcessHandlerException, IOException {
+    Map<String, String> clientEnvironmentVariables =
+        ImmutableMap.of("mykey1", "myval1", "mykey2", "myval2");
+
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java7Service))
+            .projectJdkVersion("1.8")
+            .environment(clientEnvironmentVariables)
+            .build();
+
+    Map<String, String> expectedEnvironment =
+        ImmutableMap.<String, String>builder()
+            .putAll(expectedJava7Environment)
+            .putAll(clientEnvironmentVariables)
+            .build();
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown", "--disable_update_check", java7Service.toString());
+    List<String> expectedJvmArgs =
+        ImmutableList.of(
             "-javaagent:"
                 + fakeJavaSdkHome.resolve("agent/appengine-agent.jar").toAbsolutePath().toString());
 
@@ -392,6 +709,51 @@ public class DevServerTest {
 
     RunConfiguration configuration =
         RunConfiguration.builder(ImmutableList.of(java8Service1EnvVars))
+            .environment(clientEnvironmentVariables)
+            .build();
+
+    List<String> expectedFlags =
+        ImmutableList.of(
+            "--allow_remote_shutdown",
+            "--disable_update_check",
+            "--no_java_agent",
+            java8Service1EnvVars.toString());
+
+    List<String> expectedJvmArgs =
+        ImmutableList.of(
+            "--add-opens", "java.base/java.net=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+            "--add-opens", "java.base/sun.net.www.protocol.https=ALL-UNNAMED",
+            "-Duse_jetty9_runtime=true", "-D--enable_all_permissions=true");
+
+    Map<String, String> appEngineEnvironment = ImmutableMap.of("key1", "val1", "key2", "val2");
+    Map<String, String> expectedEnvironment =
+        ImmutableMap.<String, String>builder()
+            .putAll(appEngineEnvironment)
+            .putAll(expectedJava8Environment)
+            .putAll(clientEnvironmentVariables)
+            .build();
+
+    devServer.run(configuration);
+
+    verify(devAppServerRunner, times(1))
+        .run(
+            expectedJvmArgs,
+            expectedFlags,
+            expectedEnvironment,
+            java8Service1EnvVars /* workingDirectory */);
+  }
+
+  @Test
+  public void
+      testPrepareCommand_clientSuppliedAndAppEngineWebXmlEnvironmentVariables_projectJDKVersionJava8()
+          throws AppEngineException, ProcessHandlerException, IOException {
+    Map<String, String> clientEnvironmentVariables =
+        ImmutableMap.of("mykey1", "myval1", "mykey2", "myval2");
+
+    RunConfiguration configuration =
+        RunConfiguration.builder(ImmutableList.of(java8Service1EnvVars))
+            .projectJdkVersion("1.8")
             .environment(clientEnvironmentVariables)
             .build();
 
@@ -530,5 +892,33 @@ public class DevServerTest {
   @Test
   public void testGetGaeRuntimeJava_isNotJava8() {
     Assert.assertEquals("java7", DevServer.getGaeRuntimeJava(false));
+  }
+
+  @Test
+  public void testGetJdkVersion_isValid() {
+    Assert.assertEquals(8, DevServer.getJdkMajorVersion("1.8"));
+    Assert.assertEquals(9, DevServer.getJdkMajorVersion("9"));
+    Assert.assertEquals(11, DevServer.getJdkMajorVersion("11"));
+    Assert.assertEquals(17, DevServer.getJdkMajorVersion("17"));
+    Assert.assertEquals(21, DevServer.getJdkMajorVersion("21"));
+
+    // These would be accepted for Java 8, but should expect them to be in
+    // `java.specification.version` syntax
+    Assert.assertEquals(8, DevServer.getJdkMajorVersion("1.8.0_181-google-v7"));
+    Assert.assertEquals(1, DevServer.getJdkMajorVersion("1.11"));
+  }
+
+  @Test
+  public void testGetJdkVersion_isInvalid_throwsIllegalArgumentException() {
+    // May be valid JDK versions names, but should expect them in `java.specification.version`
+    // syntax
+    assertThrows(IllegalArgumentException.class, () -> DevServer.getJdkMajorVersion("11.0.0"));
+    assertThrows(IllegalArgumentException.class, () -> DevServer.getJdkMajorVersion("17.0.11"));
+    assertThrows(
+        IllegalArgumentException.class, () -> DevServer.getJdkMajorVersion("11.0.0_181-google-v7"));
+
+    assertThrows(IllegalArgumentException.class, () -> DevServer.getJdkMajorVersion("12abc"));
+    assertThrows(IllegalArgumentException.class, () -> DevServer.getJdkMajorVersion("as37.5"));
+    assertThrows(IllegalArgumentException.class, () -> DevServer.getJdkMajorVersion("1.a8s"));
   }
 }
